--- a/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
+++ b/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
@@ -1,21 +1,21 @@
 <item>
 <title>[B][COLOR orange]1ª Temporada [/COLOR] | [COLOR red]7Plus[/COLOR][/B]</title>
 <link>LINK</link>
-<thumbnail>https://www.themoviedb.org/t/p/original/lunRXEz4Wun6oxg4mAsI8CctQ4a.jpg</thumbnail>
+<thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
 <fanart>https://www.themoviedb.org/t/p/original/fsdf44rTf9HG6kHtv9zeEdqt4eS.jpg</fanart>
-<info>[B][COLOR red]Big Sky 1ª Temporada | 16 episódios[/COLOR][/B]</info>
+<info>[B][COLOR red]Flashback Dance Anos 90 Vol. 2 | 16 episódios[/COLOR][/B]</info>
 
 </item>
 
 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 
 <item>
-<title>[B][COLOR white] Big Sky (2020) [/COLOR][COLOR orange](Episódio 1)[/COLOR][/B]</title>
-<link>http://napalm64.aigaion.feralhosting.com/media/Series/Big.Sky/Big.Sky.2020.S01E01.mp4</link>
-<subtitle>http://napalm64.aigaion.feralhosting.com/media/Series/Big.Sky/SRT/Big.Sky.2020.S01E01.srt</subtitle>
-<thumbnail>https://www.themoviedb.org/t/p/original/lunRXEz4Wun6oxg4mAsI8CctQ4a.jpg</thumbnail>
+<title>[B][COLOR white] 1-2-3! (Train With Me) [Radio Mix] [/COLOR][COLOR orange](Music 1)[/COLOR][/B]</title>
+<link>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/CD%201/01%201-2-3%21%20%28Train%20With%20Me%29%20%5BRadio%20Mix%5D%20-%20Playahitty.mp3</link>
+<subtitle></subtitle>
+<thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
 <fanart>https://www.themoviedb.org/t/p/original/fsdf44rTf9HG6kHtv9zeEdqt4eS.jpg</fanart>
-<info>[B][COLOR red]Big Sky (2020)[/COLOR][/B]</info>
+<info>[B][COLOR red]1-2-3! (Train With Me) [Radio Mix][/COLOR][/B]</info>
 
 </item>
 
