--- a/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
+++ b/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
@@ -1,9 +1,9 @@
 <item>
-<title>[B][COLOR orange]1ª Temporada [/COLOR] | [COLOR red]7Plus[/COLOR][/B]</title>
+<title>[B][COLOR orange]CD - 1 [/COLOR] | [COLOR red]7Plus[/COLOR][/B]</title>
 <link>LINK</link>
 <thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
 <fanart>https://www.themoviedb.org/t/p/original/fsdf44rTf9HG6kHtv9zeEdqt4eS.jpg</fanart>
-<info>[B][COLOR red]Flashback Dance Anos 90 Vol. 2 | 16 episódios[/COLOR][/B]</info>
+<info>[B][COLOR red]Flashback Dance Anos 90 Vol. 2 | CD - 1 [/COLOR][/B]</info>
 
 </item>
 
@@ -16,6 +16,18 @@
 <thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
 <fanart>https://www.themoviedb.org/t/p/original/fsdf44rTf9HG6kHtv9zeEdqt4eS.jpg</fanart>
 <info>[B][COLOR red]1-2-3! (Train With Me) [Radio Mix][/COLOR][/B]</info>
+
+</item>
+
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+
+<item>
+<title>[B][COLOR white] Dancing With An Angel (Radio Mix) [/COLOR][COLOR orange](Music 2)[/COLOR][/B]</title>
+<link>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/CD%201/02%20Dancing%20With%20An%20Angel%20%28Radio%20Mix%29%20-%20Double%20You.mp3</link>
+<subtitle></subtitle>
+<thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
+<fanart>https://www.themoviedb.org/t/p/original/fsdf44rTf9HG6kHtv9zeEdqt4eS.jpg</fanart>
+<info>[B][COLOR red]Dancing With An Angel (Radio Mix)[/COLOR][/B]</info>
 
 </item>
 
