--- a/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
+++ b/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
@@ -14,7 +14,7 @@
 <link>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/CD%201/01%201-2-3%21%20%28Train%20With%20Me%29%20%5BRadio%20Mix%5D%20-%20Playahitty.mp3</link>
 <subtitle></subtitle>
 <thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
-<fanart>https://www.themoviedb.org/t/p/original/fsdf44rTf9HG6kHtv9zeEdqt4eS.jpg</fanart>
+<fanart>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/98662c81af6d7289fa52bb35ed28a0ab_anim.jpg</fanart>
 <info>[B][COLOR red]1-2-3! (Train With Me) [Radio Mix][/COLOR][/B]</info>
 
 </item>
@@ -26,7 +26,7 @@
 <link>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/CD%201/02%20Dancing%20With%20An%20Angel%20%28Radio%20Mix%29%20-%20Double%20You.mp3</link>
 <subtitle></subtitle>
 <thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
-<fanart>https://www.themoviedb.org/t/p/original/fsdf44rTf9HG6kHtv9zeEdqt4eS.jpg</fanart>
+<fanart>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/98662c81af6d7289fa52bb35ed28a0ab_anim.jpg</fanart>
 <info>[B][COLOR red]Dancing With An Angel (Radio Mix)[/COLOR][/B]</info>
 
 </item>
