--- a/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
+++ b/Music/Flashback.Dance.Anos.90.Vol.2/CD.1
@@ -32,3 +32,15 @@
 </item>
 
 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+
+<item>
+<title>[B][COLOR white] Dancing With An Angel (Radio Mix) [/COLOR][COLOR orange](Music 3)[/COLOR][/B]</title>
+<link>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/CD%201/03%20Believe%20-%20Cher.mp3</link>
+<subtitle></subtitle>
+<thumbnail>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/Capa%20frontal.jpg</thumbnail>
+<fanart>http://napalm64.aigaion.feralhosting.com/media/Music/Flashback.Dance.Anos.90.Vol.2.CD.2/ws_Music_Three_2560x1920.jpg</fanart>
+<info>[B][COLOR red]Dancing With An Angel (Radio Mix)[/COLOR][/B]</info>
+
+</item>
+
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
