--- a/Music/Rock.Wave.Especial.2
+++ b/Music/Rock.Wave.Especial.2
@@ -3,7 +3,10 @@
 <link>http://maximus44.antaeus.feralhosting.com/media/music/Rock.Wave.Especial.2.mp3</link>
 <thumbnail>http://maximus44.antaeus.feralhosting.com/media/music/Capa.frontal/Rock.Wave.Especial.2.jpg</thumbnail>
 <fanart>http://maximus44.antaeus.feralhosting.com/media/music/Capafundo/Rock.Wave.Especial.2.jpg</fanart>
-<info>[B][COLOR red]Rock Wave Especial 2 [/COLOR][/B]</info>
+<info>[B][COLOR red]Rock Wave Especial 2 [/COLOR][/B]
+[COLOR lime]Duração:[/COLOR][COLOR white] 1:01:26[/COLOR]
+
+</info>
 
 </item>
 
