--- a/Music/Rock.Wave.Especial.2
+++ b/Music/Rock.Wave.Especial.2
@@ -1,6 +1,7 @@
 <item>
 <title>[B][COLOR white] Rock Wave Especial 2 [/COLOR][COLOR orange](Music 1)[/COLOR][/B]</title>
 <link>http://maximus44.antaeus.feralhosting.com/media/music/Rock.Wave.Especial.2.mp3</link>
+<subtitle>http://napalm64.aigaion.feralhosting.com/media/Filmes/SRT/Halo.4.Forward.Unto.Dawn.2012.srt</subtitle>
 <thumbnail>http://maximus44.antaeus.feralhosting.com/media/music/Capa.frontal/Rock.Wave.Especial.2.jpg</thumbnail>
 <fanart>http://maximus44.antaeus.feralhosting.com/media/music/Capafundo/Rock.Wave.Especial.2.jpg</fanart>
 <info>[B][COLOR red]Rock Wave Especial 2 [/COLOR][/B]
