--- a/Music/Rock.Wave.Especial.2
+++ b/Music/Rock.Wave.Especial.2
@@ -3,7 +3,21 @@
 <link>http://maximus44.antaeus.feralhosting.com/media/music/Rock.Wave.Especial.2.mp3</link>
 <thumbnail>http://maximus44.antaeus.feralhosting.com/media/music/Capa.frontal/Rock.Wave.Especial.2.jpg</thumbnail>
 <fanart>http://maximus44.antaeus.feralhosting.com/media/music/Capafundo/Rock.Wave.Especial.2.jpg</fanart>
-<info>[B][COLOR red]Rock Wave Especial 2 [/COLOR][/B]
+<info>
+01 Your Love - The Outfield
+02 Jump - Van Halen
+03 Pride (In The Name Of Love) - U2
+04 Just Another Night - Mick Jagger
+05 So Far Away - Dire Straits
+06 I Was Born To Love You - Freddie Mercury
+07 Used To Love Her - Guns N' Roses
+08 You Give Love A Bad Name - Bon Jovi
+09 Take on Me - a-ha
+10 Burning Heart - Survivor
+11 Breaking All The Rules - Peter Frampton
+12 Money For Nothing - Dire Straits
+13 Rosanna - TOTO
+14 The Final Countdown - Europe
 [COLOR lime]Duração:[/COLOR][COLOR white] 1:01:26[/COLOR]
 
 </info>
