--- a/Music/Rock.Wave.Especial.2
+++ b/Music/Rock.Wave.Especial.2
@@ -1,5 +1,5 @@
 <item>
-<title>[B][COLOR white] CD 1 [/COLOR][COLOR red] 7Plus[/COLOR][/B]</title>
+<title>[B][COLOR white] Rock Wave Especial 2 [/COLOR][COLOR red] 7Plus[/COLOR][/B]</title>
 <link>http://maximus44.antaeus.feralhosting.com/media/music/Rock.Wave.Especial.2.mp3</link>
 <thumbnail>http://maximus44.antaeus.feralhosting.com/media/music/Capa.frontal/Rock.Wave.Especial.2.jpg</thumbnail>
 <fanart>http://maximus44.antaeus.feralhosting.com/media/music/Capafundo/Rock.Wave.Especial.2.jpg</fanart>
